# PajtonFlask

./: .replit  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vectorize.js
Node.js/: Install Additional Tools for Node.js.lnk  Node.js command prompt.lnk  Node.js.lnk  Uninstall Node.js.lnk
inkstitch-main/templates/: stitch_plan_preview.xml
templates/: index.html
